src/modules/linklist/linklist.scss
.mdl-linklist {
  &--last {
    @include sizeCurve(margin-bottom, big);
  }

  &__title {
    @include sizeCurve(margin-top, big);
    @include sizeCurve(margin-bottom, tiny);
  }

  &__chapter-number {
    min-width: pxToRem($chapterNumberMinWidth);
    padding-right: pxToRem($sizeTiny);
  }

  &__list {
    margin: 0;
    padding: 0;
    list-style-type: none;
  }
}

